# ECNU-CampusNavigation

./: .gitignore  CMakeLists.txt  README.md
data/Comparison/: README.md
data/Comparison/grid_naive/: answer.txt  command.txt  roads.csv
data/Comparison/grid_tarjan/: answer.txt  command.txt  places.csv  roads.csv
data/Comparison/k80_naive/: answer.txt  command.txt  roads.csv
data/Comparison/k80_tarjan/: answer.txt  command.txt  places.csv  roads.csv
data/Confrontation/: README.md
data/Confrontation/Big/: answer.txt  command.txt  places.csv  roads.csv
data/Confrontation/complete_graph_K100/: answer.txt  command.txt  places.csv  roads.csv
data/Confrontation/mass_chain_K2500/: answer.txt  command.txt  places.csv  roads.csv
data/Confrontation/mass_grid_K1500/: answer.txt  command.txt  places.csv  roads.csv
data/Confrontation/prim_killer_K2000/: answer.txt  command.txt  places.csv
data/Debug/: README.md
data/Debug/empty/: answer.txt  command.txt
data/Debug/illegal_command/: answer.txt  command.txt
data/Debug/illegal_data/: answer.txt  command.txt  places.csv  roads.csv
data/Debug/trivial/: answer.txt  command.txt
data/Micro/: README.md
data/Micro/knight_graph/: answer.txt  command.txt  places.csv  roads.csv
docs/: AI协作记录.md  创新数据集.md  实验报告.md  拓展任务.md  用法指南.md
docs/support/: SEMANTIC.md
include/: CommandProcessor.h  CsvIO.h  GraphAlgorithm.h  GraphElements.h  LGraph.h
src/: CommandProcessor.cpp  CsvIO.cpp  GraphAlgorithm.cpp  GraphElements.cpp  LGraph.cpp  main.cpp
test/: testall.cpp
web/: bridge.py  架构设计.md
web/static/: index.html
(+4 files in other folders)
